tests/negative/gold/no_nl3_test.gold
tests/negative/no_nl3_test.toit:9:5: error: Incomplete expression
  if
    ^
tests/negative/no_nl3_test.toit:9:3: error: Missing colon for 'if' condition
  if
  ^~
Compilation failed.
